--- a/pages/about.html
+++ b/pages/about.html
@@ -26,12 +26,10 @@
         <div class="row">
             <!-- Personal Bio Section -->
             <div class="col-sm-12 col-md-7 d-grey">
-                <p>I'm 23 years old and based in Bergen. Currently, I'm working full time in Eide Fjordbruk as an A.I Facilitator while pursuing a Bachelor's degree in Cybersecurity. What draws me to this field is its dynamic nature; new threats and vulnerabilities always emerging. This means there's always challenges to overcome and being on the side that safeguards information is incredibly rewarding. The idea of blending Datascience, A.I and Cybersecurity in a potential job or in projects excites me.</p>
+                <p>I'm 23 years old and based in Bergen. Currently, I've been hired as part of a one-year project position at Eide Fjordbruk doing a bit of everything. My title is AI-Facilitator but I also do fullstack development for Eide.</p>
                 <br><br>
                 <p>In my spare time I am either coding, climbing, playing video games or fishing. If you wonder, my favorite video game of all time is World of Warcraft, and that's simply because no other game is as rewarding.</p>
-                <br><br>
-                <p>As mentioned, I am currently working at Eide Fjordbruk, employed as a AI Facilitator, but I do much more than that. I have been with this organization for nearly 5 months at the time of writing (April 2024), and this job has been an amazing learning opportunity and supplied me with first-hand experience with production and maintenance of code.</p>
-                <br><br>
+                <br><br></p>
                 <p>Scroll down and read more about my areas of expertise!</p>
             </div>
         </div>
