--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,6 +13,29 @@
 
       <div class="col-sm-12 col-md-4 tile">
         <div class="text-center d-grey img_center">
+            <img id="project_img" src="../assets/img/icons/aTa17qyI.png"/>
+        </div>
+        <div class="col-sm-12 d-grey">
+          <h3 class="d-grey">Eide Organic</h3>
+          <h5 class="d-grey">Web application for eide.organic - worked as part of a two-man team. Fullstack development.</h5>
+          <hr>
+          <p class="d-grey">
+            Eide Fjordbruk (2024-Current): Landing page for the Eide Organic brand.
+          </p><br>
+          <p class="d-grey">
+            The page is built using Python / flask and JS, HTML and CSS. The page is hosted on Azure - project size around 10 000 lines of code.
+          </p>
+          <br><br>
+          <div class="project_buttons">
+            <a href="https://eide.organic" class="project_button" target="_blank">
+              <ion-icon name="globe-outline" style="padding: 0px 10px 0px 0px; vertical-align: middle;"></ion-icon>Visit the site! (Closed source codebase)
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-12 col-md-4 tile">
+        <div class="text-center d-grey img_center">
             <img id="project_img" src="../assets/img/icons/web-logo.png"/>
         </div>
         <div class="col-sm-12 d-grey">
