--- a/pages/skills.html
+++ b/pages/skills.html
@@ -20,7 +20,7 @@
             <p>Web (HTML,CSS,JS)
                 <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;"></div>Expert</div></div>
             </p>
-            <p>Azure DevOps / Git / Github
+            <p>PowerFx
                 <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;"></div>Expert</div></div>
             </p
             <p>MySQL
@@ -44,7 +44,11 @@
             <p>OpenAI
                 <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
-            
+
+            <p>Azure OpenAI Service
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div></div>
+            </p>
+
             <p>Discord
                 <div class="w3-round w3-tiny skill_bar">
                     <div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div>
@@ -85,9 +89,17 @@
             <hr style="border-color: #d1d1d133;">
             <p>Software Development
                 <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div></div>
-            </p>            
+            </p>
+            
+            <p>Azure Devops / Git / Github
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:90%;"><div style="padding-top: 1px;">Expert</div></div></div>
+            </p>
 
-            <p>Communication
+            <p>Azure Management (App Services, Linux servers, SQL service, Blob Storage, Key Vaults, etc..)
+                <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div></div>
+            </p>
+
+            <p>Microsoft Entra ID
                 <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:85%;"><div style="padding-top: 1px;">Expert</div></div></div>
             </p>
 
@@ -103,9 +115,6 @@
                 <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:55%;"><div style="padding-top: 1px;">Proficient</div></div></div>
             </p>
 
-            <p>Git
-            <div class="w3-round w3-tiny skill_bar"><div data-inviewport="bar-fill" style="width:50%;"><div style="padding-top: 1px;">Proficient</div></div>
-            </p>
             <hr>
         </div> 
     </div>
