--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,7 +13,7 @@
 
       <div class="col-sm-12 col-md-4 tile">
         <div class="text-center d-grey img_center">
-            <img id="project_img" src="../assets/img/icons/aTa17qyI.png"/>
+            <img id="project_img" src="../assets/img/icons/eide_horisontal.jpg"/>
         </div>
         <div class="col-sm-12 d-grey">
           <h3 class="d-grey">Eide Organic</h3>
